<resources>
    <string name="app_name">MyDiagram</string>
    <string name="activity_name">MyDiagram</string>

    <string name="action_save">save</string>
    <string name="action_load">load</string>
    <string name="action_clear">clear</string>
    <string name="action_undo">undo</string>
    <string name="action_redo">redo</string>
    <string name="action_convert">convert</string>

</resources>
