<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerHorizontal="true"
    android:orientation="horizontal">

    <Button
        android:id="@+id/action_save"
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:contentDescription="@null"
        android:text="@string/action_save" />

    <Button
        android:id="@+id/action_load"
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:contentDescription="@null"
        android:text="@string/action_load" />

    <Button
        android:id="@+id/action_clear"
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:contentDescription="@null"
        android:text="@string/action_clear" />

    <Button
        android:id="@+id/action_undo"
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:contentDescription="@null"
        android:text="@string/action_undo" />

    <Button
        android:id="@+id/action_redo"
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:contentDescription="@null"
        android:text="@string/action_redo" />

    <Button
        android:id="@+id/action_convert"
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:contentDescription="@null"
        android:text="@string/action_convert" />
</LinearLayout>